# akarras-web

./: Cargo.toml  Dockerfile  README.md  fly.toml  package-lock.json  tailwind.config.js
app/: Cargo.toml
app/src/: blog.rs  components.rs  error_template.rs  flickr.rs  home_page.rs  lib.rs  not_found.rs  pictures.rs  projects.rs
app/src/components/: match_formatter.rs  select.rs
app/src/toys/: ev_charge_sim.rs  mod.rs
blog/: a-simple-blog-for-a-simple-man.md
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
style/: main.scss  tailwind.css
