[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde.workspace = true
chrono.workspace = true
tokio = { workspace = true, optional = true }
comrak.workspace = true
itertools.workspace = true
reqwest = { workspace = true, optional = true }
retainer = { workspace = true, optional = true }
const_soft_float = "0.1.4"
sublime_fuzzy = "0.7.0"
leptos-use.workspace = true
charming = { version = "0.3.1", optional = true }
log.workspace = true
serde_json = "1.0.108"
base64 = "0.21.5"
flate2 = "1.0.28"
web-sys = {version = "0.3.66", features = ["HtmlElement"]}

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "charming", "charming/wasm"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:tokio", "dep:reqwest", "dep:retainer", "leptos-use/ssr"]

